--- a/app/globals.css
+++ b/app/globals.css
@@ -16,18 +16,36 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.emoji-shadow {
+  scale: 1;
+  animation-name: emoji-shadow-anim;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+@keyframes emoji-shadow-anim {
+  0% {
+    scale: 1;
+  }
+  50% {
+    scale: 0;
+  }
+  100% {
+    scale: 1;
+  }
+}
+
+.rectangle {
+  transform: translateX(-10vw) rotate(20deg);
+  transition: transform 2000ms;
+}
+.card:hover .rectangle {
+  transform: translateX(100vw) rotate(20deg);
+  transition: transform 2000ms;
 }
